[gd_scene load_steps=2 format=3 uid="uid://bj47d0mnmbnc8"]

[ext_resource type="Script" path="res://inputmap_editor/remap_button.gd" id="1_8fbh4"]

[node name="RemapButton" type="Button"]
custom_minimum_size = Vector2(200, 50)
theme_type_variation = &"DefaultButton"
toggle_mode = true
text_overrun_behavior = 3
icon_alignment = 1
expand_icon = true
script = ExtResource("1_8fbh4")
action_name = &"jump"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="toggled" from="." to="." method="_on_toggled"]
